// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PadLeft[Default(1),(1,4)] DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════╦════════════╗",
  "║ Cell 1-1║    Cell 2-1║",
  "╠═════════╬════════════╣",
  "║ Cell 1-2║    Cell 2-2║",
  "╚═════════╩════════════╝",
]
`;

exports[`PadLeft[Default(1),(1,4)] HORIZONTAL_DOUBLE_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "╒═════════╤════════════╕",
  "│ Cell 1-1│    Cell 2-1│",
  "╞═════════╪════════════╡",
  "│ Cell 1-2│    Cell 2-2│",
  "╘═════════╧════════════╛",
]
`;

exports[`PadLeft[Default(1),(1,4)] HORIZONTAL_THICK_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "┍━━━━━━━━━┯━━━━━━━━━━━━┑",
  "│ Cell 1-1│    Cell 2-1│",
  "┝━━━━━━━━━┿━━━━━━━━━━━━┥",
  "│ Cell 1-2│    Cell 2-2│",
  "┕━━━━━━━━━┷━━━━━━━━━━━━┙",
]
`;

exports[`PadLeft[Default(1),(1,4)] HORIZONTAL_THIN_VERTICAL_DOUBLE [Simple 2x2] 1`] = `
[
  "╓─────────╥────────────╖",
  "║ Cell 1-1║    Cell 2-1║",
  "╟─────────╫────────────╢",
  "║ Cell 1-2║    Cell 2-2║",
  "╙─────────╨────────────╜",
]
`;

exports[`PadLeft[Default(1),(1,4)] HORIZONTAL_THIN_VERTICAL_THICK [Simple 2x2] 1`] = `
[
  "┎─────────┰────────────┒",
  "┃ Cell 1-1┃    Cell 2-1┃",
  "┠─────────╂────────────┨",
  "┃ Cell 1-2┃    Cell 2-2┃",
  "┖─────────┸────────────┚",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_DOUBLE_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────╥────────────┐",
  "│ Cell 1-1║    Cell 2-1│",
  "╞═════════╬════════════╡",
  "│ Cell 1-2║    Cell 2-2│",
  "└─────────╨────────────┘",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_DOUBLE_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────╥────────────╮",
  "│ Cell 1-1║    Cell 2-1│",
  "╞═════════╬════════════╡",
  "│ Cell 1-2║    Cell 2-2│",
  "╰─────────╨────────────╯",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_THICK_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────┰────────────┐",
  "│ Cell 1-1┃    Cell 2-1│",
  "┝━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│ Cell 1-2┃    Cell 2-2│",
  "└─────────┸────────────┘",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_THICK_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────┰────────────╮",
  "│ Cell 1-1┃    Cell 2-1│",
  "┝━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│ Cell 1-2┃    Cell 2-2│",
  "╰─────────┸────────────╯",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_THIN_OUTER_DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════╤════════════╗",
  "║ Cell 1-1│    Cell 2-1║",
  "╟─────────┼────────────╢",
  "║ Cell 1-2│    Cell 2-2║",
  "╚═════════╧════════════╝",
]
`;

exports[`PadLeft[Default(1),(1,4)] INNER_THIN_OUTER_THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━┯━━━━━━━━━━━━┓",
  "┃ Cell 1-1│    Cell 2-1┃",
  "┠─────────┼────────────┨",
  "┃ Cell 1-2│    Cell 2-2┃",
  "┗━━━━━━━━━┷━━━━━━━━━━━━┛",
]
`;

exports[`PadLeft[Default(1),(1,4)] THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━┳━━━━━━━━━━━━┓",
  "┃ Cell 1-1┃    Cell 2-1┃",
  "┣━━━━━━━━━╋━━━━━━━━━━━━┫",
  "┃ Cell 1-2┃    Cell 2-2┃",
  "┗━━━━━━━━━┻━━━━━━━━━━━━┛",
]
`;

exports[`PadLeft[Default(1),(1,4)] THIN [Simple 2x2] 1`] = `
[
  "┌─────────┬────────────┐",
  "│ Cell 1-1│    Cell 2-1│",
  "├─────────┼────────────┤",
  "│ Cell 1-2│    Cell 2-2│",
  "└─────────┴────────────┘",
]
`;

exports[`PadLeft[Default(1),(1,4)] THINCURVE [Simple 2x2] 1`] = `
[
  "╭─────────┬────────────╮",
  "│ Cell 1-1│    Cell 2-1│",
  "├─────────┼────────────┤",
  "│ Cell 1-2│    Cell 2-2│",
  "╰─────────┴────────────╯",
]
`;

exports[`PadLeft[Default(1),(1,4)] VERTICALBAR_PLUS_EQUALS [Simple 2x2] 1`] = `
[
  "+=========+============+",
  "| Cell 1-1|    Cell 2-1|",
  "+=========+============+",
  "| Cell 1-2|    Cell 2-2|",
  "+=========+============+",
]
`;

exports[`PadLeft[Default(1),(1,4)] VERTICALBAR_PLUS_MINUS [Simple 2x2] 1`] = `
[
  "+---------+------------+",
  "| Cell 1-1|    Cell 2-1|",
  "+---------+------------+",
  "| Cell 1-2|    Cell 2-2|",
  "+---------+------------+",
]
`;

exports[`PadLeft[Default(1),(1,4)] VERTICALBAR_PLUS_MINUS_SLASHES [Simple 2x2] 1`] = `
[
  "/---------+------------\\",
  "| Cell 1-1|    Cell 2-1|",
  "+---------+------------+",
  "| Cell 1-2|    Cell 2-2|",
  "\\---------+------------/",
]
`;
